2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Make compilation more robust.
	* ipopt.mk: Here.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Libtool warning.
	* ipopt.mk: New.
	* src/Makefile.am,
	* tests/Makefile.am: Do not link directly against a module
	but against sources.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Make compilation more robust.
	* tests/Makefile.am: Here.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Use new documentation rules.
	* configure.ac: Here.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Make compilation more robust.
	* src/Makefile.am: Use PTHREAD_CFLAGS.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix test suite.
	* tests/hs071.hh,
	* tests/plugin.cc,
	* tests/simple.cc: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize with share.
	* tests/hs071.hh: Here.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Regenerate reference.
	Display has been updated in roboptim-core.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Generalize constraints.
	* include/roboptim/core/plugin/ipopt.hh,
	* src/roboptim-core-ipopt-plugin.cc,
	* tests/hs071.hh,
	* tests/plugin.cc,
	* tests/simple.cc:
	Update to new generalized constraint system.

2009-06-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix build-chain when headers are in non-standard directories.
	* src/Makefile.am,
	* tests/Makefile.am: Add ROBOPTIMCORE_CFLAGS to CPPFLAGS.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux/boost.m4: New.
	* build-aux/deb.mk: New.
	* build-aux/doxygen.m4: New.
	* build-aux/ebuild.mk: New.
	* build-aux/init.mk: Synchronize.
	* build-aux/move-if-change: New.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: New.