@@ -1,3 +1,8 @@
+2009-06-18  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Remove useless copy.
+	* src/roboptim-core-ipopt-plugin.cc: Remove useless lambda copy.
+
 2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Make compilation more robust.
